# real_estate_agent

./: .gitignore  README.md  file_path.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: utils.py
app/api/applyhome_agent/: router.py  schema.py  service.py
app/api/base_agent/: router.py  schema.py  service.py
app/api/law_agent/: router.py  schema.py  service.py
app/api/pdf_agent/: router.py  schema.py  service.py
app/api/routing_agent/: router.py  schema.py  service.py
app/core/: pathinfo.py  youth_house_utils.py
app/prompt_templates/: Agent_Description.yaml  Routing_Agent_Prompt.yaml  __init__.py  grade_documents.txt  rewrite.txt
app/tools/: __init__.py  cralwer_tool3_selenium.py  crawler.py  crawler_tool.py  crawler_tool1.py  crawler_tool2.py  example_tools.py  house_types.json  pdf_retriever.py  tavily.py
app/tools/mcp_server/: law_search.py  law_tool.py  mcp_server_rag.py  server.py
bot/: main.py  utils.py
bot/handler/: applyhome.py  law.py  pdf.py  routing.py
bot/schema/: __init__.py  applyhome.py  base.py  pdf.py  routing.py
downloaded/: getAtchmnfl.dohouseManageNo=2025000312&pblancNo=2025000312&atchmnflSeqNo=1559114&atchmnflSn=1
web/: login.py  save_chat.py  streamlit.py  utils.py
web/chat_data/: abc.json
web/handler/: __init__.py  applyhome.py  law.py  pdf.py  routing.py
web/schema/: __init__.py  applyhome.py  law.py  pdf.py  routing.py
web/user_db/: users.yaml
